Cambios a los titulos

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
 <!--  -------------------------------Inicio tercer formulario-------------------------------------->
 
                 <form class="form form-3" action="javascript:void(0);" autocomplete="off">
-                  <h2 class="titulo titulo-main">Primera Referencia Personales</h2>
+                  <h3 class="titulo titulo-main">Primera Referencia Personal</h3>
                   <label>
                     <span class="span-input">Nombres y Apellidos</span>
                       <input
@@ -504,7 +504,7 @@
                       class="input-data parentezco1">
                     <p class="err-space"></p>
                   </label>
-                  <h2 class="titulo titulo-main">Segunda Referencia Personales</h2>
+                  <h3 class="titulo titulo-main">Segunda Referencia Personal</h3>
                   <label>
                     <span class="span-input">Nombre y Apellido</span>
                       <input
@@ -528,7 +528,7 @@
                       class="input-data parentezco2">
                     <p class="err-space"></p>
                   </label>
-                  <h2 class="titulo titulo-main">Referencia Comercial</h2>
+                  <h3 class="titulo titulo-main">Referencia Comercial</h3>
                   <label>
                     <span class="span-input">Nombre y Apellido de la Referencia Comercial</span>
                       <input
@@ -551,7 +551,7 @@
 <!-----------------------------------Inicio cuarto formulario------------------------------------->
 
                 <form class="form form-4" action="javascript:void(0);" autocomplete="off"  >
-                  <h2 class="titulo titulo-main">Direccion Personal</h2>
+                  <h3 class="titulo titulo-main">Direccion Personal</h3>
                   <label>
                     <span class="span-input">Ciudad</span>
                     <div class="select-container">
@@ -584,7 +584,7 @@
                     <p class="err-space"></p>
                   </label>
 
-                  <h2 class="titulo titulo-main">Direccion Laboral</h2>
+                  <h3 class="titulo titulo-main">Direccion Laboral</h3>
 
                   <label>
                     <span class="span-input">Ciudad</span>
