Cambios a la nueva rama

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/responsive.css">
-    <script src="./js/index.js" defer></script>
+    <script src="./js/index.js" type="module" defer></script>
   </head>
   <body>
     <div class="main-container">
@@ -682,7 +682,46 @@
 
 <!-- -------------------------- Inicio sexto formulario ----------------------------- -->
                 <form class="form form-6" action="">
-                  <div class="video-container">
+
+                  <div class="pre-load-section">
+                    <p class="titulo titulo-main">Necesitamos que suba algunos documentos</p>
+                    <p class="parrafo">Para subir los documentos requeridos por favor presione sobre el boton o el texto en rojo y siga las instrucciones.</p>
+  
+                    <div class="seccion fotos">
+                      <div class="container-clickable">
+                        <div class="clickable-option">
+                          <button type="button" class="button-add">+</button>
+                          <p class="red-text">Frente de tu cédula</p>
+                        </div>
+                      </div>
+                      <div class="container-clickable">
+                        <div class="clickable-option">
+                          <button type="button" class="button-add">+</button>
+                          <p class="red-text">Dorso de tu cédula</p>
+                        </div>
+                      </div>
+                      <div class="container-clickable">
+                        <div class="clickable-option">
+                          <button type="button" class="button-add">+</button>
+                          <p class="red-text">Selfie</p>
+                        </div>
+                      </div>
+                      <div class="container-clickable">
+                        <div class="clickable-option">
+                          <button type="button" class="button-add">+</button>
+                          <p class="red-text">Boletas</p>
+                        </div>
+                      </div>
+                      <div class="container-clickable">
+                        <div class="clickable-option">
+                          <button type="button" class="button-add">+</button>
+                          <p class="red-text">Documento Respaldatorio De Domicilio</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- <div class="video-container">
                     <video class="video" src=""></video>
                     <div class="loader"></div>
                   </div>
@@ -762,7 +801,7 @@
                       <p class="text-card">Documento Respaldatorio De Domicilio</p>
                       <img class="delete-image delete-6" src="./img/red-x.webp" alt="delete6">
                     </div>
-                  </div>
+                  </div> -->
 
                 </form>
 
