Cambios al estado de confirmacion

--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
                 <p class="info-text">Numero de Casa:</p>
                 <p class="info"></p>
               </div>
+              <div class="info-section">
+                <p class="info-text">Referencias:</p>
+                <p class="info"></p>
+              </div>
               <h4 class="titulo">Direccion Laboral:</h4>
               <div class="info-section">
                 <p class="info-text">Ciudad:</p>
@@ -192,6 +196,10 @@
               </div>
               <div class="info-section">
                 <p class="info-text">Numero de Edificio:</p>
+                <p class="info"></p>
+              </div>
+              <div class="info-section">
+                <p class="info-text">Referencias:</p>
                 <p class="info"></p>
               </div>
 
@@ -255,7 +263,7 @@
                   <img src="" alt="boleta-ips" class="boleta-ips">
                 </div>
                 <div class="info-section">
-                  <p class="info-text">Boleta de Salario:</p>
+                  <p class="info-text">Boleta de salario:</p>
                   <img src="" alt="boleta-salario" class="boleta-salario">
                 </div>
               </div>
@@ -288,7 +296,7 @@
                 <div class="titulo titulo-confirm">
                   <h4>Documento de Domicilio</h3>
                 </div>
-                <p class="info-text">Documento de Domicilio:</p>
+                <p class="info-text">Documento de domicilio:</p>
                 <img src="" alt="domicilio" class="domicilio">
               </div>
             </div>
@@ -300,7 +308,7 @@
 <!-- --------------------------Inicio del primer form ------------------------- -->
                 <form class="form form-1" action="" autocomplete="off"  >
                     <label>
-                      <span class="span-input">Nombres y Apellidos</span>
+                      <span class="span-input">Nombres y apellidos</span>
                         <input
                           class="input-data input-name"
                           type="text" name="username"
@@ -315,7 +323,7 @@
                           autocomplete="off">
                           <p class="err-space"></p>
                     </label>
-                      <span class="span-input span-fecha">Ingrese su Fecha de Nacimiento</span>
+                      <span class="span-input span-fecha">Ingrese su fecha de nacimiento</span>
                       <div class="fecha-container">
                         <label class="fecha">
                           <div class="select-container">
@@ -356,7 +364,7 @@
                       </div>
                         <p class="err-fecha-nacimiento"></p>
                     <label>
-                      <span class="span-input">Seleccione su Sexo</span>
+                      <span class="span-input">Seleccione su sexo</span>
                         <div class="select-container">
                           <select class="select select-genero input-data" name="genero" id="">
                             <option value=""></option>
@@ -367,7 +375,7 @@
                         <p class="err-space"> </p>
                     </label>
                     <label>
-                      <span class="span-input">Seleccione su Estado Civil</span>
+                      <span class="span-input">Seleccione su estado civil</span>
                         <div class="select-container">
                           <select class="select-estado-civil input-data" name="estado-civil" id="">
                             <option value="" selected></option>
@@ -381,14 +389,14 @@
                         <p class="err-space"></p>
                     </label>
                     <label>
-                      <span class="span-input">Correo Electrónico</span>
+                      <span class="span-input">Correo electrónico</span>
                       <input
                         type="text"
                         class="input-data input-email">
                       <p class="err-space"></p>
                     </label>
                     <label>
-                      <span class="span-input">Número de Celular</span>
+                      <span class="span-input">Número de celular</span>
                       <input
                         type="text"
                         class="input-data input-phone"
@@ -400,7 +408,7 @@
 
                 <form class="form form-2" action="" autocomplete="off"  >
                   <label>
-                    <span class="span-input">Seleccione su Ocupación</span>
+                    <span class="span-input">Seleccione su ocupación</span>
                       <div class="select-container">
                         <select class="select-ocupacion input-data" name="Ocupacion" id="">
                           <option value="" selected></option>
@@ -411,13 +419,13 @@
                       <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Área Laboral</span>
+                    <span class="span-input">Área laboral</span>
                       <input type="text" class="input-data input-AL"
                       autocapitalize="sentences">
                       <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Lugar de Trabajo</span>
+                    <span class="span-input">Lugar de trabajo</span>
                       <input
                         type="text"
                         class="input-data input-trabajo"
@@ -425,13 +433,13 @@
                       <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Ingrese su Salario</span>
+                    <span class="span-input">Ingrese su salario</span>
                       <input
                         type="text"
                         class="input-data input-ingresos">
                       <p class="err-space"></p>
                   </label>
-                  <span class="span-input span-fecha">Fecha de Ingreso a la Empresa</span>
+                  <span class="span-input span-fecha">Fecha de ingreso a la empresa</span>
                   <div class="fecha-container">
                     <label class="fecha">
                       <div class="select-container">
@@ -480,7 +488,7 @@
 <!--  -------------------------------Inicio tercer formulario-------------------------------------->
 
                 <form class="form form-3" action="javascript:void(0);" autocomplete="off">
-                  <h3 class="titulo titulo-main">Primera Referencia Personal</h3>
+                  <h3 class="titulo titulo-main">Primera referencia personal</h3>
                   <label>
                     <span class="span-input">Nombres y Apellidos</span>
                       <input
@@ -490,7 +498,7 @@
                       <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Número de Celular</span>
+                    <span class="span-input">Número de celular</span>
                     <input
                       type="text"
                       class="input-data input-first-ref"
@@ -504,9 +512,9 @@
                       class="input-data parentezco1">
                     <p class="err-space"></p>
                   </label>
-                  <h3 class="titulo titulo-main">Segunda Referencia Personal</h3>
+                  <h3 class="titulo titulo-main">Segunda referencia personal</h3>
                   <label>
-                    <span class="span-input">Nombre y Apellido</span>
+                    <span class="span-input">Nombre y apellido</span>
                       <input
                         class="input-data input-name-second-ref"
                         type="text" name="username"
@@ -528,9 +536,9 @@
                       class="input-data parentezco2">
                     <p class="err-space"></p>
                   </label>
-                  <h3 class="titulo titulo-main">Referencia Comercial</h3>
+                  <h3 class="titulo titulo-main">Referencia comercial</h3>
                   <label>
-                    <span class="span-input">Nombre y Apellido de la Referencia Comercial</span>
+                    <span class="span-input">Nombre y apellido de la referencia comercial</span>
                       <input
                         class="input-data input-name-comercial"
                         type="text" name="username"
@@ -538,7 +546,7 @@
                       <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Número de Celular de la Referencia Comercial</span>
+                    <span class="span-input">Número de celular de la referencia comercial</span>
                     <input
                       type="text"
                       class="input-data input-ref-comer"
@@ -551,7 +559,7 @@
 <!-----------------------------------Inicio cuarto formulario------------------------------------->
 
                 <form class="form form-4" action="javascript:void(0);" autocomplete="off"  >
-                  <h3 class="titulo titulo-main">Direccion Personal</h3>
+                  <h3 class="titulo titulo-main">Direccion personal</h3>
                   <label>
                     <span class="span-input">Ciudad</span>
                     <div class="select-container">
@@ -579,12 +587,16 @@
                     </label>
                   </div>
                   <label>
-                    <span class="span-input">Número de Casa (Campo Opcional)</span>
+                    <span class="span-input">Número de casa (Opcional)</span>
                     <input class="input-data numero-casa opcional" type="text" autocapitalize="sentences">
                     <p class="err-space"></p>
                   </label>
+                  <label class="text-area">
+                    <span class="span-input">Escriba una referencia (Opcional)</span>
+                    <input type="text" class="input-data referencia opcional">
+                  </label>
 
-                  <h3 class="titulo titulo-main">Direccion Laboral</h3>
+                  <h3 class="titulo titulo-main">Direccion laboral</h3>
 
                   <label>
                     <span class="span-input">Ciudad</span>
@@ -613,9 +625,13 @@
                     </label>
                   </div>
                   <label>
-                    <span class="span-input">Numero de Edificio (Opcional)</span>
+                    <span class="span-input">Numero de edificio (Opcional)</span>
                     <input class="input-data numero-edificio-trabajo opcional" type="text" autocapitalize="sentences">
                     <p class="err-space"></p>
+                  </label>
+                  <label>
+                    <span class="span-input">Escriba una referencia (Opcional)</span>
+                    <input type="text" class="input-data referencia opcional">
                   </label>
                 </form>
 
