--- a/index.html
+++ b/index.html
@@ -694,6 +694,12 @@
                       <button type="button" class="circular-button">+</button>
                     </div>
                   </div>
+                  <input
+                    id="cameraFileInput"
+                    type="file"
+                    accept="image/*"
+                    capture="environment"
+                  />
                 </form>
 
 <!-- -------------------------- Inicio sexto formulario ----------------------------- -->
