Se agregan los otros dos input para la camara

--- a/index.html
+++ b/index.html
@@ -662,26 +662,43 @@
             <div class="seccion fotos">
               <div class="container-clickable">
                 <div class="clickable-option">
-                  <button type="button" class="button-add button-add-1">+</button>
+                  <button type="button" class="button-add">+</button>
                   <input
-                  id="cameraFileInput"
-                  type="file"
-                  accept="image/*"
-                  capture="environment"
-                  hidden
-                />
+                    id="cameraFileInput1"
+                    class="cameraFileInput"
+                    type="file"
+                    accept="image/*"
+                    capture="environment"
+                    hidden
+                  />
                   <p class="red-text">Documento de Identidad</p>
                 </div>
               </div>
               <div class="container-clickable">
                 <div class="clickable-option">
                   <button type="button" class="button-add">+</button>
+                  <input
+                    id="cameraFileInput2"
+                    class="cameraFileInput"
+                    type="file"
+                    accept="image/*"
+                    capture="environment"
+                    hidden
+                  />
                   <p class="red-text">Documento de Identidad</p>
                 </div>
               </div>
               <div class="container-clickable">
                 <div class="clickable-option">
                   <button type="button" class="button-add">+</button>
+                  <input
+                    id="cameraFileInput3"
+                    class="cameraFileInput"
+                    type="file"
+                    accept="image/*"
+                    capture="environment"
+                    hidden
+                  />
                   <p class="red-text">Documento de Identidad</p>
                 </div>
               </div>
