Se agrega el atributo imagen

--- a/index.html
+++ b/index.html
@@ -674,6 +674,7 @@
                   <p class="red-text">Documento de Identidad</p>
                 </div>
               </div>
+              <img id="pictureFromCamera" />
               <div class="container-clickable">
                 <div class="clickable-option">
                   <button type="button" class="button-add">+</button>
@@ -703,12 +704,6 @@
                 </div>
               </div>
             </div>
-            <input
-              id="cameraFileInput"
-              type="file"
-              accept="image/*"
-              capture="environment"
-            />
             
             <!-- <p>Boletas</p>
             <div class="archivos-boletas">
