Se agrega estilos a la foto tomada

--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
                   <p class="red-text">Documento de Identidad</p>
                 </div>
               </div>
-              <img id="pictureFromCamera" />
+              <img class="img-camara" id="pictureFromCamera" />
               <div class="container-clickable">
                 <div class="clickable-option">
                   <button type="button" class="button-add">+</button>
