Se agregan las funciones para controlar la carga de imagenes

--- a/index.html
+++ b/index.html
@@ -674,7 +674,9 @@
                   <p class="red-text">Documento de Identidad</p>
                 </div>
               </div>
-              <img class="img-camara" id="pictureFromCamera" />
+
+              <img class="img-camara" id="pictureFromCamera1" />
+
               <div class="container-clickable">
                 <div class="clickable-option">
                   <button type="button" class="button-add">+</button>
@@ -689,6 +691,9 @@
                   <p class="red-text">Documento de Identidad</p>
                 </div>
               </div>
+
+              <img class="img-camara" id="pictureFromCamera2" />
+
               <div class="container-clickable">
                 <div class="clickable-option">
                   <button type="button" class="button-add">+</button>
@@ -703,6 +708,9 @@
                   <p class="red-text">Documento de Identidad</p>
                 </div>
               </div>
+
+              <img class="img-camara" id="pictureFromCamera3" />
+
             </div>
             
             <!-- <p>Boletas</p>
