se mejoran los textos para las fotos

--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
                     capture="environment"
                     hidden
                   />
-                  <p class="red-text">Documento de Identidad</p>
+                  <p class="red-text">Frente de tu cédula</p>
                 </div>
               </div>
               <img class="img-camara" id="pictureFromCamera1" />
@@ -688,7 +688,7 @@
                     capture="environment"
                     hidden
                   />
-                  <p class="red-text">Documento de Identidad</p>
+                  <p class="red-text">Dorso de tu cédula</p>
                 </div>
               </div>
               <img class="img-camara" id="pictureFromCamera2" />
@@ -705,7 +705,7 @@
                     capture="environment"
                     hidden
                   />
-                  <p class="red-text">Documento de Identidad</p>
+                  <p class="red-text">Selfie</p>
                 </div>
               </div>
               <img class="img-camara" id="pictureFromCamera3" />
