Prueba de selfie container

--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
               <img class="img-camara" id="pictureFromCamera2" />
 
 
-              <div class="container-clickable">
+              <div class="container-clickable selfie-container">
                 <div class="clickable-option">
                   <button type="button" class="button-add">+</button>
                   <input
@@ -708,7 +708,7 @@
                   <p class="red-text">Selfie</p>
                 </div>
               </div>
-              <img class="img-camara" id="pictureFromCamera3" />
+              <img class="img-camara img-selfie" id="pictureFromCamera3" />
 
 
             </div>
