Se agregan estilos a la selfie

--- a/index.html
+++ b/index.html
@@ -705,10 +705,10 @@
                     capture="environment"
                     hidden
                   />
-                  <p class="red-text">Selfie</p>
                 </div>
               </div>
               <img class="img-camara img-selfie" id="pictureFromCamera3" />
+              <!-- <p class="red-text">Selfie</p> -->
 
 
             </div>
@@ -724,7 +724,7 @@
               <div id="preview"></div>
             </div> -->
             
-            <p>Documento Respaldatorio De Domicilio</p>
+            <!-- <p>Documento Respaldatorio De Domicilio</p> -->
             <div class="archivos-boletas">
               <div class="drop-area">
                 <h2>Arrastra y suelta los documentos</h2>
