--- a/index.html
+++ b/index.html
@@ -656,11 +656,11 @@
 
           <div class="pre-load-section">
             <p class="titulo titulo-main">Necesitamos que suba algunos documentos</p>
-            <p class="parrafo">Para subir los documentos requeridos por favor siga las instrucciones listadas abajo.</p>
-            <p class="parrafo">Es necesario que suba una foto frontal de su cedula. Para abrir la cámara presione el boton de abajo</p>
+            <p class="parrafo">Para abrir la cámara presione el boton de abajo</p>
+            <p class="parrafo">Suba una foto frontal de su cedula.</p>
 
             <div class="container-img-nombre">
-              <button type="button" class="button-red button-camera">Foto C.I. frontal</button>
+              <button type="button" class="button-red button-camera">Abrir cámara</button>
               <input
                 id="cameraFileInput1"
                 class="cameraFileInput button-red"
@@ -669,14 +669,14 @@
                 capture="environment"
                 hidden
               />
-  
+
               <p class="card foto-descripcion"></p>
             </div>
 
-            <p class="parrafo">Es necesario que suba una foto del dorso de su cedula.</p>
+            <p class="parrafo">Suba una foto del dorso de su cedula.</p>
 
             <div class="container-img-nombre">
-              <button type="button" class="button-red button-camera">Foto dorso C.I.</button>
+              <button type="button" class="button-red button-camera">Abrir cámara</button>
               <input
                 id="cameraFileInput2"
                 class="cameraFileInput"
@@ -689,10 +689,10 @@
             </div>
 
 
-            <p class="parrafo">Es necesario que suba una foto del dorso de su cedula.</p>
+            <p class="parrafo">Suba selfie suya.</p>
 
             <div class="container-img-nombre">
-              <button type="button" class="button-red button-camera">Tomar foto selfie</button>
+              <button type="button" class="button-red button-camera">Abrir cámara</button>
               <input
                 id="cameraFileInput3"
                 class="cameraFileInput"
