Se agrega un nuevo texto para las boletas

--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
             </div>
 
 
-            <p class="parrafo">Suba selfie suya.</p>
+            <p class="parrafo">Suba una selfie sosteniendo su cédula.</p>
 
             <div class="container-img-nombre">
               <button type="button" class="button-red button-camera">Abrir cámara</button>
@@ -705,7 +705,7 @@
               <p class="card foto-descripcion"></p>
             </div>
 
-            <!-- <p>Boletas</p>
+            <p class="parrafo">Subí tu comprobante de ingresos (boletas de IPS o boletas de salario y certificado laboral). Si sos contribuyente del IVA, subí tu declaración jurada de los últimos 6 meses.</p>
             <div class="archivos-boletas">
               <div class="drop-area">
                 <h2>Arrastra y suelta los documentos</h2>
@@ -714,9 +714,9 @@
                 <input type="file" name="" id="input-file" hidden multiple>
               </div>
               <div id="preview"></div>
-            </div> -->
+            </div>
             
-            <!-- <p>Documento Respaldatorio De Domicilio</p> -->
+            <!-- <p class="parrafo">Documento Respaldatorio De Domicilio</p>
             <p class="parrafo"></p>
             <div class="archivos-boletas">
               <div class="drop-area">
@@ -726,7 +726,7 @@
                 <input type="file" name="archivos" id="input-file" hidden multiple>
               </div>
               <div id="preview"></div>
-            </div>
+            </div> -->
 
           </div>
 
