Nuevo input para subir comprobante de domicilio

--- a/index.html
+++ b/index.html
@@ -705,6 +705,20 @@
               <p class="card foto-descripcion"></p>
             </div>
 
+            <p class="parrafo">Suba su documento Respaldatorio De Domicilio o tome una foto del documento</p>
+            <div class="container-img-nombre">
+              <button type="button" class="button-red button-camera">Subir archivo</button>
+              <input
+                id="documentFileinput"
+                class="cameraFileInput"
+                type="file"
+                capture="environment"
+                hidden
+              />
+
+              <p class="card foto-descripcion"></p>
+            </div>
+
             <p class="parrafo">Subí tu comprobante de ingresos (boletas de IPS o boletas de salario y certificado laboral). Si sos contribuyente del IVA, subí tu declaración jurada de los últimos 6 meses.</p>
             <div class="archivos-boletas">
               <div class="drop-area">
@@ -716,8 +730,9 @@
               <div id="preview"></div>
             </div>
             
-            <!-- <p class="parrafo">Documento Respaldatorio De Domicilio</p>
-            <p class="parrafo"></p>
+
+            
+            <!-- <p class="parrafo"></p>
             <div class="archivos-boletas">
               <div class="drop-area">
                 <h2>Arrastra y suelta los documentos</h2>
