Cambios previos a un checkout

--- a/index.html
+++ b/index.html
@@ -719,15 +719,15 @@
             </div>
 
             <p class="parrafo">Subí tu comprobante de ingresos (boletas de IPS o boletas de salario y certificado laboral). Si sos contribuyente del IVA, subí tu declaración jurada de los últimos 6 meses.</p>
-            <div class="archivos-boletas">
-              <div class="drop-area">
-                <h2>Arrastra y suelta los documentos</h2>
-                <h3>O</h3>
-                <button type="button">Selecciona tus archivos</button>
-                <input type="file" name="" id="input-file" hidden multiple>
-              </div>
-              <div id="preview"></div>
+
+            <div class="drop-area">
+              <h2>Arrastra y suelta los documentos</h2>
+              <h3>O</h3>
+              <button type="button">Selecciona tus archivos</button>
+              <input type="file" name="drag-drop" id="input-file" hidden multiple>
             </div>
+            <div id="preview"></div>
+
             
 
             
