Correcion de errores en la pantalla de confirmacion

--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
         </div>
 
         <div class="titulo titulo-confirm">
-          <h3>Direcciones</h3><!---------cambair a direccion ---------->
+          <h3>Direcciones</h3>
+          <!---------cambair a direccion ---------->
         </div>
         <div class="card-confirm">
           <h4 class="titulo">Direccion Personal:</h4>
@@ -175,10 +176,6 @@
             <p class="info-text">Numero de Casa:</p>
             <p class="info"></p>
           </div>
-          <div class="info-section">
-            <p class="info-text">Referencias:</p>
-            <p class="info"></p>
-          </div>
           <h4 class="titulo">Direccion Laboral:</h4>
           <div class="info-section">
             <p class="info-text">Ciudad:</p>
@@ -200,10 +197,6 @@
             <p class="info-text">Numero de Edificio:</p>
             <p class="info"></p>
           </div>
-          <div class="info-section">
-            <p class="info-text">Referencias:</p>
-            <p class="info"></p>
-          </div>
 
         </div>
 
@@ -221,14 +214,15 @@
               <div class="info-text">Cargo ocupado:</div>
               <p class="info-pep"></p>
             </div>
-            <p class="info-text">¿En los últimos 2 años alguno de tus parientes (políticos o por consanguinidad) ocuparon un cargo relevante en la función pública?</p>
+            <p class="info-text">¿En los últimos 2 años alguno de tus parientes (políticos o por consanguinidad)
+              ocuparon un cargo relevante en la función pública?</p>
             <p class="info-text">Respuesta: </p>
             <p class="info"></p>
             <div class="pep-fam-confirm">
               <!-- <p class="info-text">Entidad:</p>
-              <p class="info-pep-fam"></p>
-              <p class="info-text">Cargo ocupado:</p>
-              <p class="info-pep-fam"></p> -->
+                  <p class="info-pep-fam"></p>
+                  <p class="info-text">Cargo ocupado:</p>
+                  <p class="info-pep-fam"></p> -->
             </div>
           </div>
           <div class="info-section">
@@ -265,7 +259,7 @@
               <img src="" alt="boleta-ips" class="boleta-ips">
             </div>
             <div class="info-section">
-              <p class="info-text">Boleta de salario:</p>
+              <p class="info-text">Boleta de Salario:</p>
               <img src="" alt="boleta-salario" class="boleta-salario">
             </div>
           </div>
@@ -298,7 +292,7 @@
             <div class="titulo titulo-confirm">
               <h4>Documento de Domicilio</h3>
             </div>
-            <p class="info-text">Documento de domicilio:</p>
+            <p class="info-text">Documento de Domicilio:</p>
             <img src="" alt="domicilio" class="domicilio">
           </div>
         </div>
