Correcion de errores en pep y se elimina el campo de referencia

--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
             <p class="info-text">Respuesta: </p>
             <p class="info"></p>
             <div class="pep-fam-confirm">
-              <!-- <p class="info-text">Entidad:</p>
+              <p class="info-text">Entidad:</p>
                   <p class="info-pep-fam"></p>
                   <p class="info-text">Cargo ocupado:</p>
-                  <p class="info-pep-fam"></p> -->
+                  <p class="info-pep-fam"></p>
             </div>
           </div>
           <div class="info-section">
